<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_Activity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Jiaqing_hu.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Jiaqing_hu.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profilephoto_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="0dp"
                android:text="@string/profile_photo_txt"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="onChangePhotoClicked"
                    android:text="@string/change_btn_txt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="90dp"
                    android:layout_height="81dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/profilepics"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/name_txt"
                app:layout_constraintBottom_toTopOf="@+id/name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilephoto_txt" />

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:hint="@string/name_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColorHint="?android:attr/textColorHint"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/email_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_txt"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/phone_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/phone_txt"
                app:layout_constraintBottom_toTopOf="@+id/phone_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input" />

            <EditText
                android:id="@+id/phone_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="Your Phone Number"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="number|text|phone"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintBottom_toTopOf="@+id/gender_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_txt"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/class_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/class_txt"
                app:layout_constraintBottom_toTopOf="@+id/class_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/female_btn" />

            <EditText
                android:id="@+id/class_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/class_hint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintBottom_toTopOf="@+id/major_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_txt"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/gender_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/gender_txt"
                app:layout_constraintBottom_toTopOf="@+id/female_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_input" />


            <RadioGroup
                android:id="@+id/radio_btn_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ratio_btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/male_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="60dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/male_txt"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/female_btn"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/female_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginStart="40dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="122dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/female_txt"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/male_btn"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </RadioGroup>


            <TextView
                android:id="@+id/major_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/major_txt"
                app:layout_constraintBottom_toTopOf="@+id/major_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/class_input" />

            <EditText
                android:id="@+id/major_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:ems="10"
                android:hint="@string/major_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintBottom_toTopOf="@+id/save_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/major_txt"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/email_txt"
                app:layout_constraintBottom_toTopOf="@+id/email_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_input" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="25dp"
                android:autofillHints="Your Email"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="text|textEmailAddress"
                android:textColorHint="?android:attr/textColorHint"
                app:layout_constraintBottom_toTopOf="@+id/phone_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_txt"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/save_cancel_layout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:baselineAligned="true"
                    android:onClick="onCancelButtonClicked"
                    android:text="@string/cancel_btn_txt"
                    app:layout_constraintBottom_toBottomOf="@+id/save_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/save_btn"
                    app:layout_constraintTop_toTopOf="@+id/save_btn" />

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="13dp"
                    android:layout_weight="1"
                    android:baselineAligned="true"
                    android:onClick="onSaveButtonClicked"
                    android:text="@string/save_btn_txt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/cancel_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>

<!--    <include layout="@layout/content_profile" />-->

</RelativeLayout>