<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_type"
                android:layout_marginTop="20dp"
                />

            <Spinner
                android:id="@+id/input_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="SpeakableTextPresentCheck"
                android:layout_marginTop="10dp"
                >

            </Spinner>

            <TextView
                android:id="@+id/activity_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_type"
                android:layout_marginTop="20dp"
                />

            <Spinner
                android:id="@+id/activity_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

            </Spinner>

            <Button
                android:id="@+id/start_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_btn_txt"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="150dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"

                />
        </LinearLayout>
</ScrollView>
